--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -90,7 +90,7 @@
             <li style="line-height: 1.5;"><span style="font-size: 15px; color: rgb(89, 89, 89);"><span
                         style="font-size: 15px; color: rgb(89, 89, 89);"><span data-custom-class="body_text">Download
                             and use our application(s), such as<bdt class="block-component"></bdt> our mobile
-                            application<bdt class="block-component"></bdt> — <bdt class="question">Ed Open Staging<span
+                            application<bdt class="block-component"></bdt> — <bdt class="question">Ed Open<span
                                     style="font-size: 15px; color: rgb(89, 89, 89);"><span
                                         style="font-size: 15px; color: rgb(89, 89, 89);"><span
                                             data-custom-class="body_text"><span style="font-size: 15px;"><span
